/*
 * $Id: ChangeLog,v 1.1228 2014-03-06 22:12:40 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-03-06 20:12 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     ! Typo in previous entry.

2014-03-06 20:08 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     ! RTE when removing a column's image.

2014-03-02 10:24 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/c_cdiplus.c
     - Removed lResult initialization to avoid MinGW warning.

2014-03-01 21:17 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/c_gdiplus.c
     ! Fixed image return from GPlusLoadImageFromBuffer() function.

2014-02-20 18:07 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_combo.prg
     ! Combobox with DISPPLAYEDIT clause shows no items when
       the form contains another Combobox without that clause.

2014-02-17 20:07 UTC-0200 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_toolbar.ch
   * source/h_toolbar.prg
     + Added VERTICAL clause to show buttons in a column
       instead of a row.

2014-02-14 19:12 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * include/oohg.h
   * source/c_controlmisc.c
     + _OOHG_DoEventMouseCoords() function added for send mouse
       coordinates as parameter.
   * source/h_browse.prg
   * source/h_checklist.prg
   * source/h_combo.prg
   * source/h_controlmisc.prg
   * source/h_form.prg
   * source/h_grid.prg
   * source/h_listbox.prg
   * source/h_radio.prg
   * source/h_richeditbox.prg
   * source/h_status.prg
   * source/h_textbox.prg
   * source/h_toolbar.prg
   * source/h_xbrowse.prg
     + Added missing mouse coordinates to CLICK events.

2014-02-10 23:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_picture.prg
     + ::HorizontalScroll() and ::VerticalScroll() methods added.